# inference-systems-lab

./: .clang-format  .clang-tidy  .claude-code-context  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.dev  ISSUE.md  NOTIFICATION_TROUBLESHOOTING.md  PHASE_7A_ACHIEVEMENT_REPORT.md  POCS_ROAD_MAP.md  POC_COMPREHENSIVE_STATUS.md  PUSHOVER_SETUP_GUIDE.md  PYTHON_REORGANIZATION.md  README.md  TECHNICAL_DEEP_DIVE.md  WORK_TODO.md  docker-compose.dev.yml  flake.nix  requirements-dev.txt  run_benchmarks_clean.sh  run_poc_demo.sh  setup.py  setup.sh  test_ml_dependencies.py  test_python_bindings.py
build-release/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
cmake/: Benchmarking.cmake  CompilerOptions.cmake  Documentation.cmake  MLIntegration.cmake  ONNXRuntime.cmake  PackageConfig.cmake  Pybind11.cmake  Sanitizers.cmake  StaticAnalysis.cmake  TensorRT.cmake  Testing.cmake
common/: CMakeLists.txt  README.md
common/benchmarks/: container_benchmarks.cpp  result_benchmarks.cpp
common/docs/: cpp_interface_documentation.md  logger-ring-buffer-thoughts.txt
common/examples/: demo_logging.cpp  inference_types_demo.cpp  result_usage_examples.cpp  schema_evolution_demo.cpp  test_logging.cpp
common/schemas/: Makefile  cmake_install.cmake  demo_logging  inference_types.capnp  inference_types.capnp.c++  inference_types.capnp.h  inference_types_demo  logging_tests  schema_evolution_demo
common/schemas/schemas/: inference_types.capnp.c++
common/src/: config_loader.cpp  config_loader.hpp  config_loader.py  config_loader_simple.cpp  config_loader_simple.hpp  containers.hpp  inference_builders.cpp  inference_builders.hpp  inference_types.cpp  inference_types.hpp  logging.cpp  logging.hpp  ml_types.hpp  placeholder.cpp  result.hpp  schema_evolution.cpp  schema_evolution.hpp  test_config.py  type_system.hpp  utils.cpp  utils.hpp
common/tests/: test_advanced_containers.cpp  test_concurrency_stress.cpp  test_config_loader.cpp  test_config_simple.cpp  test_containers.cpp  test_inference_builders.cpp  test_logging_unit.cpp  test_ml_logging.cpp  test_ml_types.cpp  test_result.cpp  test_serialization.cpp  test_type_system.cpp
config/: inference_lab_config.yaml  notifications.yaml  notifications.yaml.template
distributed/: CMakeLists.txt  README.md
distributed/benchmarks/: placeholder.cpp
distributed/docs/: PROTOCOLS.md
distributed/examples/: placeholder.cpp
distributed/src/: placeholder.cpp
distributed/tests/: placeholder.cpp
docker-dev/: Dockerfile.dev  README.md  docker-compose.dev.yml
docs/: ADDRESSSANITIZER_NOTES.md  CODE_REVIEW.md  (+34 more)
engines/: CMakeLists.txt  README.md
engines/benchmarks/: README.md  circular_bp_benchmarks.cpp  mamba_ssm_benchmarks.cpp  moe_demos_benchmarks.cpp  momentum_bp_benchmarks.cpp  placeholder.cpp  unified_benchmark_config.hpp  unified_inference_benchmarks.cpp
engines/docs/: ARCHITECTURE.md  MOMENTUM_BP_GUIDE.md
engines/examples/: circular_bp_demo.cpp  mamba_ssm_demo.cpp  ml_framework_benchmark.cpp  ml_framework_detection_demo.cpp  moe_computer_vision_demo.cpp  moe_recommendation_demo.cpp  moe_text_classification_demo.cpp  momentum_bp_demo.cpp  onnx_inference_demo.cpp  onnx_model_server_demo.cpp  simple_forward_chaining_demo.cpp  socrates_mortality_demo.cpp
engines/src/: forward_chaining.cpp  forward_chaining.hpp  inference_engine.cpp  inference_engine.hpp  ml_config.cpp  ml_config.hpp  model_registry.cpp  model_registry.hpp  model_registry_client.py  model_registry_schema.sql  placeholder.cpp
engines/src/circular_bp/: circular_bp.cpp  circular_bp.hpp
engines/src/mamba_ssm/: ALGORITHM_GUIDE.md  mamba_ssm.cpp  mamba_ssm.hpp
engines/src/mixture_experts/: CMakeLists.txt  expert_parameters.cpp  expert_parameters.hpp  expert_router.cpp  expert_router.hpp  load_balancer.cpp  load_balancer.hpp  moe_config.cpp  moe_config.hpp  moe_engine.cpp  moe_engine.hpp  sparse_activation.cpp  sparse_activation.hpp
engines/src/mixture_experts/benchmarks/: moe_benchmarks.cpp
engines/src/mixture_experts/tests/: test_expert_router.cpp  test_load_balancer.cpp  test_moe_config.cpp  test_moe_engine.cpp  test_moe_integration.cpp  test_sparse_activation.cpp
engines/src/momentum_bp/: momentum_bp.cpp  momentum_bp.hpp  placeholder.cpp
engines/src/neuro_symbolic/: differentiable_ops.hpp  fuzzy_logic.hpp  logic_tensor_network.cpp  logic_tensor_network.hpp  logic_types.cpp  logic_types.hpp  predicate_system.cpp  predicate_system.hpp  symbolic_logic.cpp  symbolic_logic.hpp  tensor_logic_bridge.hpp
engines/src/onnx/: onnx_engine.cpp  onnx_engine.hpp
engines/src/python_bindings/: CMakeLists.txt  inference_bindings.cpp  logging_bindings.cpp  main.cpp  registry_bindings.cpp  result_bindings.cpp  tensor_bindings.cpp
engines/src/tensorrt/: tensorrt_engine.hpp
engines/tests/: placeholder.cpp  test_circular_bp.cpp  test_differentiable_ltn.cpp  test_engines_comprehensive.cpp  test_forward_chaining.cpp  test_inference_engine.cpp  test_integration.py  test_logic_types.cpp  test_mamba_ssm.cpp  test_ml_config.cpp  test_model_registry.py  test_moe_demos.cpp  test_momentum_bp.cpp  test_predicate_system.cpp  test_python_bindings.py  test_symbolic_logic.cpp  test_unified_benchmarks.cpp
experiments/: CMakeLists.txt  README.md
experiments/src/: consensus_comparison_experiment.cpp  memory_inference_experiment.cpp  rule_optimization_experiment.cpp
experiments/tests/: placeholder.cpp
integration/: CMakeLists.txt  README.md
integration/benchmarks/: ml_performance_benchmarks.cpp.disabled  placeholder.cpp
integration/src/: integration_test_utils.cpp  integration_test_utils.hpp  ml_integration_framework.cpp  ml_integration_framework.hpp  mock_engines.cpp  mock_engines.hpp  placeholder.cpp
integration/tests/: placeholder.cpp  test_integration_stress.cpp  test_ml_integration.cpp
performance/: CMakeLists.txt  README.md
performance/benchmarks/: placeholder.cpp
performance/docs/: OPTIMIZATION_GUIDE.md
performance/src/: placeholder.cpp
performance/tests/: placeholder.cpp
(+104 files in other folders)
